quark/test/quark/AST/Errors/functionAlreadyDeclared-003.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: a i32 -> void {}
fn foo: a i32 -> void {}

// CHECK:Error: function 'foo' already defined!
